# worldinterface

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/wi-cli/: Cargo.toml  README.md
crates/wi-cli/src/: client.rs  error.rs  main.rs  output.rs
crates/wi-cli/src/commands/: capabilities.rs  flow.rs  invoke.rs  run.rs  serve.rs  webhook.rs
crates/wi-connector/: Cargo.toml  README.md
crates/wi-connector/src/: context.rs  receipt_gen.rs  registry.rs  traits.rs  transform.rs
crates/wi-connector/src/connectors/: delay.rs  fs_read.rs  fs_write.rs  http_request.rs
crates/wi-contextstore/: Cargo.toml  README.md
crates/wi-contextstore/src/: atomic.rs  config.rs  error.rs  lib.rs  sqlite.rs  store.rs
crates/wi-coordinator/: Cargo.toml  README.md
crates/wi-coordinator/src/: branch_eval.rs  coordinator.rs  error.rs  handler.rs  resolve.rs  step.rs
crates/wi-coordinator/tests/: integration.rs
crates/wi-core/: Cargo.toml  README.md
crates/wi-core/src/: descriptor.rs  id.rs  lib.rs  receipt.rs
crates/wi-core/src/flowspec/: branch.rs  connector.rs  edge.rs  topo.rs  validate.rs
crates/wi-daemon/: Cargo.toml  README.md
crates/wi-daemon/src/: config.rs  error.rs  lib.rs  router.rs  server.rs  state.rs
crates/wi-daemon/src/metrics/: mod.rs  recorder.rs  registry.rs
crates/wi-daemon/src/routes/: capabilities.rs  flows.rs  health.rs  invoke.rs  metrics.rs  mod.rs  runs.rs  webhooks.rs
crates/wi-daemon/tests/: acceptance.rs  integration.rs
crates/wi-daemon/tests/helpers/: mod.rs
crates/wi-flowspec/: Cargo.toml  README.md
crates/wi-flowspec/src/: compile.rs  error.rs  id.rs  lib.rs  payload.rs
crates/wi-host/: Cargo.toml  README.md
crates/wi-host/src/: config.rs  error.rs  helpers.rs  host.rs  lib.rs  status.rs  tick.rs
crates/wi-host/tests/: integration.rs
crates/wi-http-trigger/: Cargo.toml  README.md
crates/wi-http-trigger/src/: error.rs  handler.rs  lib.rs  receipt.rs  registration.rs  registry.rs  types.rs  validation.rs
crates/worldinterface-cli/: Cargo.toml  README.md
crates/worldinterface-cli/src/: client.rs  error.rs  main.rs  output.rs
crates/worldinterface-cli/src/commands/: flow.rs  mod.rs  run.rs  serve.rs  webhook.rs
crates/worldinterface-connector/: Cargo.toml  README.md
crates/worldinterface-connector/src/: context.rs  error.rs  lib.rs  receipt_gen.rs  registry.rs  signal_registry.rs  traits.rs  transform.rs
crates/worldinterface-connector/src/connectors/: code_apply_patch.rs  code_common.rs  code_edit.rs  code_fuzzy.rs  code_git_diff.rs  code_glob.rs  code_grep.rs  code_impls.rs  code_ls.rs  code_read.rs  code_read_symbol.rs  code_references.rs  code_symbol.rs  code_test.rs  code_write.rs  delay.rs  fs_read.rs  fs_write.rs  gitignore_check.rs  http_request.rs  mod.rs  peer_resolve.rs  repo_context.rs  repo_locate.rs  sandbox_exec.rs  shell_exec.rs  signal_await.rs  signal_emit.rs
crates/worldinterface-connector/src/semantic/: mod.rs  types.rs
crates/worldinterface-connector/src/semantic/rust/: analyzer.rs  mod.rs
crates/worldinterface-contextstore/: Cargo.toml  README.md
crates/worldinterface-contextstore/src/: atomic.rs  error.rs  lib.rs  sqlite.rs  store.rs
crates/worldinterface-coordinator/: Cargo.toml  README.md
crates/worldinterface-coordinator/src/: branch_eval.rs  coordinator.rs  error.rs  handler.rs  lib.rs  resolve.rs  step.rs
crates/worldinterface-coordinator/tests/: integration.rs
crates/worldinterface-core/: Cargo.toml  README.md
crates/worldinterface-core/src/: descriptor.rs  lib.rs  metrics.rs  streaming.rs
crates/worldinterface-daemon/: Cargo.toml  README.md
crates/worldinterface-daemon/src/: config.rs  error.rs  lib.rs  server.rs  state.rs
crates/worldinterface-daemon/tests/: acceptance.rs  integration.rs
crates/worldinterface-flowspec/: Cargo.toml  README.md
crates/worldinterface-flowspec/src/: compile.rs  config.rs  error.rs  id.rs  lib.rs  payload.rs
crates/worldinterface-host/: Cargo.toml  README.md
crates/worldinterface-host/src/: config.rs  error.rs  helpers.rs  host.rs  lib.rs  status.rs  tick.rs  watcher.rs
crates/worldinterface-host/tests/: integration.rs
crates/worldinterface-http-trigger/: Cargo.toml  README.md
crates/worldinterface-http-trigger/src/: error.rs  handler.rs  lib.rs  receipt.rs  registration.rs  registry.rs  trigger.rs
crates/worldinterface-wasm/: Cargo.toml
crates/worldinterface-wasm/src/: connector.rs  error.rs  lib.rs  manifest.rs  metering.rs  module_loader.rs  policy.rs  resource_pool.rs  runtime.rs  state.rs  streaming.rs  streaming_bindings.rs
crates/worldinterface-wasm/src/host_functions/: clocks.rs  crypto.rs  environment.rs  filesystem.rs  http.rs  kv.rs  logging.rs  mod.rs  process.rs  random.rs  sockets.rs  websocket.rs
crates/worldinterface-wasm/test-modules/compiled/: .gitignore  echo.connector.toml  host-caller.connector.toml  stress.connector.toml
crates/worldinterface-wasm/test-modules/echo/: Cargo.toml
crates/worldinterface-wasm/test-modules/echo/src/: lib.rs
crates/worldinterface-wasm/test-modules/host-caller/: Cargo.toml
crates/worldinterface-wasm/test-modules/host-caller/src/: lib.rs
crates/worldinterface-wasm/test-modules/streaming-echo/: Cargo.toml  streaming-echo.connector.toml
crates/worldinterface-wasm/test-modules/streaming-echo/src/: lib.rs
crates/worldinterface-wasm/test-modules/stress/: Cargo.toml
crates/worldinterface-wasm/test-modules/stress/src/: lib.rs
crates/worldinterface-wasm/tests/: wasm_integration.rs
crates/worldinterface-wasm/wit/: world.wit
docs/: data-directory.md  flowspec-reference.md  idempotency.md  wasm-connector-development.md
examples/agent-embedding/: Cargo.toml
examples/agent-embedding/src/: main.rs
examples/golden-path/: flow.yaml  webhook-flow.yaml
examples/wasm-connectors/: build-all.sh
examples/wasm-connectors/compiled/: discord.connector.toml
examples/wasm-connectors/discord/: Cargo.toml  (+1 more)
(+21 files in other folders)
