[workspace]
resolver = "2"
members = [
    "crates/worldinterface-core",
    "crates/worldinterface-flowspec",
    "crates/worldinterface-contextstore",
    "crates/worldinterface-connector",
    "crates/worldinterface-coordinator",
    "crates/worldinterface-host",
    "crates/worldinterface-http-trigger",
    "crates/worldinterface-daemon",
    "crates/worldinterface-cli",
]
exclude = [
    "examples/agent-embedding",
]

[workspace.package]
version = "0.1.2"
authors = ["Keith <zed.colonel@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zed-colonel/worldinterface"

[workspace.dependencies]
# Internal crates
worldinterface-core = { path = "crates/worldinterface-core", version = "0.1.2" }
worldinterface-flowspec = { path = "crates/worldinterface-flowspec", version = "0.1.2" }
worldinterface-contextstore = { path = "crates/worldinterface-contextstore", version = "0.1.2" }
worldinterface-connector = { path = "crates/worldinterface-connector", version = "0.1.2" }
worldinterface-coordinator = { path = "crates/worldinterface-coordinator", version = "0.1.2" }
worldinterface-host = { path = "crates/worldinterface-host", version = "0.1.2" }
worldinterface-http-trigger = { path = "crates/worldinterface-http-trigger", version = "0.1.2" }
worldinterface-daemon = { path = "crates/worldinterface-daemon", version = "0.1.2" }

# ActionQueue crates (from crates.io)
actionqueue-core = { version = "0.1.0", features = ["serde"] }
actionqueue-workflow = "0.1.0"
actionqueue-engine = "0.1.0"
actionqueue-budget = "0.1.0"
actionqueue-actor = "0.1.0"
actionqueue-platform = "0.1.0"
actionqueue-storage = "0.1.0"
actionqueue-runtime = "0.1.1"
actionqueue-executor-local = "0.1.1"

# Shared dependencies
serde = { version = ">=1.0, <1.0.224", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
prometheus = "0.13"
tower-http = { version = "0.6", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
sha2 = "0.10"

# Test dependencies
tempfile = "3"
proptest = "1.4"
tokio-test = "0.4"

[patch.crates-io]
worldinterface-core = { path = "crates/worldinterface-core" }
worldinterface-flowspec = { path = "crates/worldinterface-flowspec" }
worldinterface-contextstore = { path = "crates/worldinterface-contextstore" }
worldinterface-connector = { path = "crates/worldinterface-connector" }
worldinterface-coordinator = { path = "crates/worldinterface-coordinator" }
worldinterface-host = { path = "crates/worldinterface-host" }
worldinterface-http-trigger = { path = "crates/worldinterface-http-trigger" }
worldinterface-daemon = { path = "crates/worldinterface-daemon" }
worldinterface-cli = { path = "crates/worldinterface-cli" }
