[package]
name = "wi-cli"
description = "CLI binary for WorldInterface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wi"
path = "src/main.rs"

[dependencies]
wi-core = { workspace = true }
wi-host = { workspace = true }
wi-daemon = { workspace = true }
wi-connector = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
