[package]
name = "wi-contextstore"
description = "Atomic durable store for WorldInterface node outputs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
