[package]
name = "wi-coordinator"
description = "ActionQueue handler for WorldInterface FlowRun orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wi-core = { workspace = true }
wi-flowspec = { workspace = true }
wi-contextstore = { workspace = true }
wi-connector = { workspace = true }
actionqueue-core = "0.1.0"
actionqueue-workflow = "0.1.0"
actionqueue-executor-local = "0.1.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
actionqueue-engine = "0.1.0"
actionqueue-runtime = { version = "0.1.1", features = ["budget"] }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
