[package]
name = "wi-core"
description = "Core domain types for WorldInterface: FlowSpec, IDs, Descriptor, Receipt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
proptest = { workspace = true }
