[package]
name = "wi-core"
authors.workspace = true
description = "Core domain types for WorldInterface: FlowSpec, IDs, Descriptor, Receipt"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["worldinterface", "flowspec", "boundary", "workflow", "types"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
proptest = { workspace = true }
