[package]
name = "worldinterface-contextstore"
authors.workspace = true
description = "Atomic durable store for WorldInterface node outputs"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["worldinterface", "context-store", "sqlite", "durable", "atomic"]
categories = ["database-implementations"]

[dependencies]
worldinterface-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
