[package]
name = "worldinterface-host"
authors.workspace = true
description = "Embedded Host trait for WorldInterface (Agent integration surface)"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["worldinterface", "host", "embedding", "agent", "runtime"]
categories = ["concurrency"]

[features]
default = ["wasm"]
wasm = ["dep:worldinterface-wasm"]
wasm-tests = ["wasm"]
watcher = ["notify"]

[dependencies]
worldinterface-core = { workspace = true }
worldinterface-flowspec = { workspace = true }
worldinterface-contextstore = { workspace = true }
worldinterface-connector = { workspace = true }
worldinterface-coordinator = { workspace = true }
worldinterface-wasm = { workspace = true, optional = true }
actionqueue-core = "0.1.0"
actionqueue-runtime = { version = "0.1.1", features = ["budget"] }
actionqueue-executor-local = "0.1.1"
actionqueue-storage = "0.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
notify = { version = "7", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
