[package]
name = "worldinterface-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM runtime for WorldInterface connector modules"

[features]
default = []
wasm-tests = []

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
worldinterface-core.workspace = true
worldinterface-connector.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rusqlite.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
hmac.workspace = true
uuid.workspace = true
nix.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wat = "1"
